--- a/configure.in
+++ b/configure.in
@@ -8,7 +8,7 @@ dnl Detect the canonical host and target build environment
 AC_CANONICAL_SYSTEM
 
 AM_INIT_AUTOMAKE(transcode,1.1.7)
-AM_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS(config.h)
 
 AM_MAINTAINER_MODE
 
