--- a/config.h.in
+++ b/config.h.in
@@ -138,6 +138,9 @@
 /* have libavformat support */
 #undef HAVE_LIBAVFORMAT
 
+/* have libavutil support */
+#undef HAVE_LIBAVUTIL
+
 /* Define to 1 if you have the `dl' library (-ldl). */
 #undef HAVE_LIBDL
 
@@ -170,6 +173,9 @@
 
 /* have libquicktime support */
 #undef HAVE_LIBQUICKTIME
+
+/* have libswresample support */
+#undef HAVE_LIBSWRESAMPLE
 
 /* have libv4l2 support */
 #undef HAVE_LIBV4L2
